--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <meta name="Content-type" content="Content-Type: application/x-font-woff" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="keywords" content="e-Shiksha" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <meta http-equiv="Content-type" content="charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/bootstrap.min.css" type="text/css" /> -->
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/animate.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/custom-animate.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/jarallax.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/jquery.magnific-popup.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/nouislider.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/nouislider.pips.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/odometer.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/swiper.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icomoon@1.0.0/style.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/tiny-slider.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/owl.carousel.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/owl.theme.default.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/twentytwenty.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="http://164.100.196.138/lms/assets/css/custom-responsive.css" type="text/css" />
+    <script src="http://164.100.196.138/lms/assets/js/jquery-3.5.1.min.js"></script>
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="http://164.100.196.138/lms/assets/img/favicons/favicon-16x16.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" id="jssDefault" href="http://164.100.196.138/lms/assets/css/theme1.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,8 +53,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  </head>
-  <body>
+</head>
+
+<body className="no-js" lang="de">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +68,41 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="http://164.100.196.138/lms/assets/js/bootstrap.bundle.min.js"></script> -->
+    <script src="http://164.100.196.138/lms/assets/js/jarallax.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.ajaxchimp.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.appear.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.circle-progress.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.validate.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/nouislider.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/odometer.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/swiper.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/tiny-slider.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/wNumb.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/wow.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/isotope.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/countdown.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/owl.carousel.min.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/twentytwenty.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.event.move.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/themeswitcher.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/jquery.print.js"></script>
+    <script src="http://164.100.196.138/lms/assets/js/custom.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#styleOptions').styleSwitcher({
+                hasPreview: false,
+                fullPath: 'http://164.100.196.138/lms/assets/css/',
+                cookie: {
+                    expires: 3600,
+                    isManagingLoad: true
+                }
+            });
+        });
+    </script>
+</body>
+
 </html>
